samples/_failures_safe/1761688568_a14ec8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0e8abf3.c: In function ‘main’:
./samples/SAFE/__tmp_b0e8abf3.c:159:5: error: expected expression at end of input
  159 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b0e8abf3.c:159:5: error: expected declaration or statement at end of input
